# fast-api-challenge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: db.py  main.py  models.py
src/api/: deps.py  routes.py  schemas.py
src/api/endpoints/: accounts.py  auth.py  items.py  operations.py
src/core/: config.py  security.py
tests/: conftest.py  test_banking.py  test_items.py
